struktura strony i komentarze

--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
 </head>
 <body>
 <div id="navigation">
-<!--Piotr-->
+<!--Piotr--
+<!-- Odsyłacze do poszczególnych ID-->
 </div>
 <div id="intro">
 <!--Patryk-->
+    <!--Hasło - Zdrowie Twoje i Twoich Bliskich jest dla nas Najważniejsze-->
+    <!--Comment - Wybierzemy dla Ciebie najlepsze produkty-->
 </div>
 
 <div id="features">
 <!--Beata-->
+    <p>Sugerowane produkty</p>
+    <p>Porównaj ceny</p>
+    <p>Lokalizacje sklepów z produktami</p>
+    <p>Lista zakupów</p>
 </div>
 <div id="singup">
 <!--buttton tutaj-->
