lista do nawigacji/ nazwy listy

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <div id="navigation">
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Intro</li>
+        <li>Features</li>
+        <li>Sign up!</li>
+        <li>Team</li>
 
 
     </ul>
