struktura strony i komentarze background color footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sugero.pl</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/fontello.css">
 </head>
 <body>
 <div id="navigation">
@@ -38,7 +39,47 @@
 
 </div>
 <div id="footer">
-<!--Karol-->
+    <div id="be">
+        <h1>Follow us</h1>
+    </div>
+    <div id="contact">
+        <h1>Contact us</h1>
+    </div>
+    <div style="clear: both"></div>
+    <div id="socials">
+        <a href="https://facebook.com" class="linksocial" target="_blank">
+            <div id="fc">
+                <i class="icon-facebook"></i>
+            </div>
+        </a>
+        <a href="htps://googleplus.com" class="linksocial" target="_blank">
+            <div id="gplus">
+                <i class="icon-googleplus"></i>
+            </div>
+        </a>
+        <a href="https://www.instagram.com" class="linksocial" target="_blank">
+            <div id="ins">
+                <i class="icon-instagram"></i>
+            </div>
+        </a>
+        <a href="https://youtube.pl" class="linksocial" target="_blank">
+            <div id="yt">
+                <i class="icon-youtube"></i>
+            </div>
+        </a>
+        <div style="clear: both"></div>
+    </div>
+    <div id="mail">
+        <a href="mailto:frontreact@infoshareacadey.pl?Subject=Hello%20again" class="linksocial" target="_blank">
+            <div id="gmail">
+                <i class="icon-gmail"></i>
+            </div>
+        </a>
+    </div>
+    <div id="credits">
+        <p>© Copyright 2016</p>
+        <p>Wszystkie prawa zastrzeżone. Wszystkie teksty, zdjęcia, grafika, ścieżki dźwiękowe, wideo i animacji danych jak również ich skład lub układ są chronione prawami autorskimi i innymi prawami ochronnymi. Ich zawartość nie mogą być kopiowane do celów komercyjnych lub innych, ani nie może on być wyświetlany, nawet w zmodyfikowanej wersji na innych stronach internetowych.</p>
+    </div>
 </div>
 </body>
 </html>
