lista do nawigacji/ nazwy listy/kolor listy/ zmiana  dotyczy navigation bar

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
 <div id="navigation">
-    <ul>
-        <li>Intro</li>
-        <li>Features</li>
-        <li>Sign up!</li>
-        <li>Team</li>
+    <ul class="navigationul">
+        <li class="navigation">
+            <a class="navigation" href="#intro">Intro</a> </li>
+        <li class="navigation">
+            <a class="navigation" href="#features">Features</a></li>
+        <li class="navigation">
+            <a class="navigation" href="#singup" >Sign up!</a></li>
+        <li class="navigation">
+            <a class="navigation" href="#team" >Team</a></li>
+        <li class="floating-clear"></li>
 
 
     </ul>
