--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
 <!--Piotr--
 <!-- Odsyłacze do poszczególnych ID-->
 </div>
-<div id="intro">
 <!--Patryk-->
-    <!--Hasło - Zdrowie Twoje i Twoich Bliskich jest dla nas Najważniejsze-->
-    <!--Comment - Wybierzemy dla Ciebie najlepsze produkty-->
-</div>
+<div id="intro">
+    <div class="logo">
+        <p></p><img class="logo" src="images/cos.svg" alt="Obrazek">
+    </div>
+    <div class="slogan">Zdrowie Twoje i Twoich bliskich
+        <br>
+        jest dla nas najważniejsze.</div>
 
+<!--Patryk-->
+
+</div>
+<!--Patryk-->
 <div id="features">
 <!--Beata-->
     <p>Sugerowane produkty</p>
