--- a/index.html
+++ b/index.html
@@ -18,10 +18,34 @@
 
 <div id="features">
 <!--Beata-->
-    <p>Sugerowane produkty</p>
-    <p>Porównaj ceny</p>
-    <p>Lokalizacje sklepów z produktami</p>
-    <p>Lista zakupów</p>
+
+    <div id="features-suggestion" class="features-float-left features-feature">
+        <p class="features-title">Sugerowane produkty</p>
+        <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Sed maximus lorem ut massa pharetra ornare. Nullam in quam
+            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
+            <!---->
+        </p>
+    </div>
+    <div id="features-compare" class="features-float-right features-feature">
+        <p class="features-title">Porównaj ceny</p>
+        <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Sed maximus lorem ut massa pharetra ornare. Nullam in quam
+            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
+    </div>
+    <div id="features-nav" class="features-float-left features-feature">
+        <p class="features-title">Lokalizacje sklepów z produktami</p>
+        <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Sed maximus lorem ut massa pharetra ornare. Nullam in quam
+            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
+    </div>
+    <div id="features-list" class="features-float-right features-feature">
+        <p class="features-title">Lista zakupów</p>
+        <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Sed maximus lorem ut massa pharetra ornare. Nullam in quam
+            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
+    </div>
+    <div class="features-float-clear"></div>
 </div>
 <div id="singup">
 <!--buttton tutaj-->
