--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <p>Lista zakupów</p>
 </div>
 <div id="singup">
+    <form action="action_signu.php">
+        Wpisz tu swojego emaila:<br>
+        <input class="inputemail" type="email" placeholder="Your email...." name="email"  autofocus>
+        <input class="myButton" type="submit">
+    </form>
 <!--buttton tutaj-->
 </div>
 <div id="team">
