--- a/index.html
+++ b/index.html
@@ -108,16 +108,14 @@
                 <i class="icon-youtube"></i>
             </div>
         </a>
-        <div style="clear: both"></div>
-    </div>
-    <div id="mail">
-        <a href="mailto:frontreact@infoshareacadey.pl?Subject=Hello%20again" class="linksocial" target="_blank">
+        <a href="mailto:frontreact@infoshareacadey.pl?Subject=Hello%20again" class="linksocial" target="_blank" style="float: right">
             <div id="gmail">
                 <i class="icon-gmail"></i>
             </div>
         </a>
+        <div style="clear: both"></div>
     </div>
-    <div id="credits">
+    <div id="credits" style="clear: both">
         <p>© Copyright 2016</p>
         <p>Wszystkie prawa zastrzeżone. Wszystkie teksty, zdjęcia, grafika, ścieżki dźwiękowe, wideo i animacji danych jak również ich skład lub układ są chronione prawami autorskimi i innymi prawami ochronnymi. Ich zawartość nie mogą być kopiowane do celów komercyjnych lub innych, ani nie może on być wyświetlany, nawet w zmodyfikowanej wersji na innych stronach internetowych.</p>
     </div>
