struktura strony i komentarze background color footer responsywny a

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/fontello.css">
 </head>
 <body>
-<nav class="navigation-nav" id="navigation">
+<div id="navigation">
     <ul class="navigationul">
         <li class="navigation">
             <a class="navigation" href="#intro">Intro</a> </li>
@@ -21,10 +21,9 @@
 
 
     </ul>
-</nav>
 <!--Piotr--
 <!-- Odsyłacze do poszczególnych ID-->
-</nav>
+</div>
 <!--Patryk-->
 <div id="intro">
     <div class="logo">
@@ -48,8 +47,6 @@
             nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
             <!---->
         </p>
-
-
     </div>
     <div id="features-compare" class="features-float-right features-feature">
         <p class="features-title">Porównaj ceny</p>
