struktura strony i komentarze background color footer responsywny aa

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <!--Patryk-->
 
+
 </div>
 <!--Patryk-->
 <div id="features">
@@ -74,11 +75,15 @@
         <input class="inputemail" type="email" placeholder="Your email...." name="email"  autofocus>
         <input class="myButton" type="submit">
     </form>
-<!--buttton tutaj-->
+
 </div>
 <div id="team">
 
 </div>
+<!--Karol-->
+
+
+
 <div id="footer">
     <div id="be">
         <h1>Follow us</h1>
