--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/fontello.css">
 </head>
 <body>
-<div id="navigation">
+<nav class="navigation-nav" id="navigation">
     <ul class="navigationul">
         <li class="navigation">
             <a class="navigation" href="#intro">Intro</a> </li>
@@ -21,9 +21,10 @@
 
 
     </ul>
+    </nav>
 <!--Piotr--
 <!-- Odsyłacze do poszczególnych ID-->
-</div>
+</nav>
 <!--Patryk-->
 <div id="intro">
     <div class="logo">
