--- a/index.html
+++ b/index.html
@@ -77,8 +77,35 @@
 <!--buttton tutaj-->
 </div>
 <div id="team">
+    <!--<div id="team-piotr" class="team-float-left team-members">-->
+        <!--<img src="" alt="zdjecie-piotr">-->
+        <!--<p>Piotr</p>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
+            <!--nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>-->
+    <!--</div>-->
+    <!--<div id="team-patryk" class="team-float-left team-members">-->
+        <!--<img src="" alt="zdjecie-patryk">-->
+        <!--<p>Patryk</p>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
+    <!--</div>-->
+    <!--<div id="team-karol" class="team-float-left team-members">-->
+        <!--<img src="" alt="zdjecie-karol">-->
+        <!--<p>Karol</p>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
+    <!--</div>-->
+    <!--<div id="team-beata" class="team-float-left team-members">-->
+        <!--<img src="" alt="zdjecie-beata">-->
+        <!--<p>Beata</p>-->
+        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
+    <!--</div>-->
 
+    <!--<div class="team-float-clear"></div>-->
 </div>
+
 <div id="footer">
     <div id="be">
         <h1>Follow us</h1>
