logo, slogan,nowe obrazki, przyciemnianie, rozjasnianie, opacity

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 <!--Patryk-->
 <div id="intro">
     <div class="logo">
-        <p></p><img class="logo" src="images/cos.svg" alt="Obrazek">
+        <p></p><img class="logo" src="images/logo.svg" alt="logo">
     </div>
-    <div class="slogan">Zdrowie Twoje i Twoich bliskich
-        <br>
-        jest dla nas najważniejsze.</div>
+    <div class="slogan">
+        <h1>Wybierzesz najlepsze produkty</h1>
+        <p>Nie ruszająć się z domu. Nigdy nie było to takie proste!</p>
+        <!--TUTAJ WSTAWIMY BUTTONA-->
+        </div>
 
 <!--Patryk-->
 
