Nowy logotyp, zmienione logo glowne, zmieniona czcionka napisow, zmieniony plik css
nie dziala z jakiegos powodu pasek nawigacji i na dole cos rozjechane (ktos chyba w pt cos w commitem powalil)

--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
     </nav>
 <!--Piotr--
 <!-- Odsyłacze do poszczególnych ID-->
-</nav>
 <!--Patryk-->
 <div id="intro">
     <div class="logo">
-        <p></p><img class="logo" src="images/logo.svg" alt="logo">
+        <p></p><img class="logo" src="images/background/logo3.png" alt="logo">
     </div>
     <div class="slogan">
         <h1>Wybierzesz najlepsze produkty</h1>
-        <p>Nie ruszająć się z domu. Nigdy nie było to takie proste!</p>
+        <p>Nie ruszając się z domu. Nigdy nie było to takie proste!</p>
         <!--TUTAJ WSTAWIMY BUTTONA-->
         </div>
 
@@ -109,12 +108,7 @@
 
     <!--<div class="team-float-clear"></div>-->
 </div>
-<<<<<<< HEAD
-=======
 <!--Karol-->
-
-
->>>>>>> origin/master
 
 <div id="footer">
     <div id="be">
