Nowy logotyp, zmienione logo glowne, zmieniona czcionka napisow, zmieniony plik css
nie dziala z jakiegos powodu pasek nawigacji i na dole cos rozjechane (ktos chyba w pt cos w commitem powalil)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!--Patryk-->
 <div id="intro">
     <div class="logo">
-        <p></p><img class="logo" src="images/background/logo3.png" alt="logo">
+        <p></p><img class="logo" src="images/background/logo31.png" alt="logo">
     </div>
     <div class="slogan">
         <h1>Wybierzesz najlepsze produkty</h1>
@@ -36,10 +36,7 @@
         </div>
 
 <!--Patryk-->
-
-
 </div>
-<!--Patryk-->
 <div id="features">
 <!--Beata-->
 
