struktura strony i komentarze background color footer responsywny aa button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <h1>Wybierzesz najlepsze produkty</h1>
         <p>Nie ruszając się z domu. Nigdy nie było to takie proste!</p>
         <!--TUTAJ WSTAWIMY BUTTONA-->
-        </div>
+        <!--Karol-button-->
+        <div id="subscribe">Subskrybuj</div>
+    </div>
 
 <!--Patryk-->
 </div>
