--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </div>
     <div class="features-float-clear"></div>
 </div>
-<div id="singup">
+<section>
+<div class="signup" id="singup">
     <form action="action_signu.php">
         Wpisz tu swojego emaila:<br>
         <input class="inputemail" type="email" placeholder="Your email...." name="email"  autofocus>
@@ -76,6 +77,7 @@
     </form>
 
 </div>
+</section>
 <div id="team">
     <!--<div id="team-piotr" class="team-float-left team-members">-->
         <!--<img src="" alt="zdjecie-piotr">-->
