dokonczone logo, zmienione posadowienie

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="logo">
         <p></p><img class="logo" src="images/background/logo31.png" alt="logo">
     </div>
-    <div class="slogan">
+    <div class="slogan" style="">
         <h1>Wybierzesz najlepsze produkty</h1>
         <p>Nie ruszając się z domu. Nigdy nie było to takie proste!</p>
         <!--TUTAJ WSTAWIMY BUTTONA-->
