struktura strony i komentarze       background color       footer responsywny aa       button/ font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Sugero.pl</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/fontello.css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 </head>
 <body>
 <nav class="navigation-nav" id="navigation">
@@ -34,7 +35,9 @@
         <p>Nie ruszając się z domu. Nigdy nie było to takie proste!</p>
         <!--TUTAJ WSTAWIMY BUTTONA-->
         <!--Karol-button-->
-        <div id="subscribe">Subskrybuj</div>
+        <a href="#singup" style="text-decoration: none;">
+            <div id="subscribe">Subskrybuj</div>
+        </a>
     </div>
 
 <!--Patryk-->
