--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 </div>
 <section>
 <div class="signup" id="singup">
-    <form action="action_signu.php">
-        Wpisz tu swojego emaila:<br>
+    <form action="http://tools.is-academy.pl/mailer.php" method="post">
+        <div class="signup">Obiecujemy zkontaktować się z tobą tylko RAZ!:</div><br>
         <input class="inputemail" type="email" placeholder="Your email...." name="email"  autofocus>
+        <input type="hidden" name="receiver" value="wildmanblues@op.pl">
         <input class="myButton" type="submit">
     </form>
 
