--- a/index.html
+++ b/index.html
@@ -77,36 +77,10 @@
     </form>
 
 </div>
-<<<<<<< Updated upstream
+
 </section>
 <div id="team">
-    <!--<div id="team-piotr" class="team-float-left team-members">-->
-        <!--<img src="" alt="zdjecie-piotr">-->
-        <!--<p>Piotr</p>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
-            <!--nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>-->
-    <!--</div>-->
-    <!--<div id="team-patryk" class="team-float-left team-members">-->
-        <!--<img src="" alt="zdjecie-patryk">-->
-        <!--<p>Patryk</p>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
-    <!--</div>-->
-    <!--<div id="team-karol" class="team-float-left team-members">-->
-        <!--<img src="" alt="zdjecie-karol">-->
-        <!--<p>Karol</p>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
-    <!--</div>-->
-    <!--<div id="team-beata" class="team-float-left team-members">-->
-        <!--<img src="" alt="zdjecie-beata">-->
-        <!--<p>Beata</p>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-            <!--Sed maximus lorem ut massa pharetra ornare. Nullam in quam-->
-    <!--</div>-->
-=======
->>>>>>> Stashed changes
+
 
 <section id="team">
     <header class="team-header">Zespół</header>
@@ -115,28 +89,28 @@
         Inventore maxime corporis similique, tempore tenetur ipsum
         eligendi animi illo deleniti voluptatum.</p>
     <div id="team-section">
-        <div class="team-members">
-            <img class="team-foto " src="face.jpg" alt="zdjecie-piotr">
-            <p class="team-name">Piotr</p>
+        <div class="team-members team-foto-Patryk">
+            <img class="team-foto " src="images/face.jpeg" alt="zdjecie-piotr">
+            <h2 class="team-name">Piotr</h2>
             <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
                 nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
         </div>
         <div class="team-members">
-            <img class="team-foto" src="face.jpg" alt="zdjecie-patryk">
-            <p class="team-name">Patryk</p>
+            <img class="team-foto" src="images/face.jpeg" alt="zdjecie-patryk">
+            <h2 class="team-name">Patryk</h2>
             <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
         </div>
         <div class="team-members">
-            <img class="team-foto" src="face.jpg" alt="zdjecie-karol">
-            <p class="team-name">Karol</p>
+            <img class="team-foto" src="images/face.jpeg" alt="zdjecie-karol">
+            <h2 class="team-name">Karol</h2>
             <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
         </div>
         <div class="team-members">
-            <img class="team-foto" src="face.jpg" alt="zdjecie-beata">
-            <p class="team-name">Beata</p>
+            <img class="team-foto" src="images/face.jpeg" alt="zdjecie-beata">
+            <h2 class="team-name">Beata</h2>
             <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
         </div>
