struktura strony i komentarze       background color       footer responsywny aa       button/ font - update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <div class="slogan" style="">
         <h1>Wybierzesz najlepsze produkty</h1>
         <p>Nie ruszając się z domu. Nigdy nie było to takie proste!</p>
-        <!--TUTAJ WSTAWIMY BUTTONA-->
+        <a href="#singup" style="text-decoration: none;">
+            <div id="subscribe">Subskrybuj</div>
+        </a>
+        <!--Patryk-->
         </div>
 
 <!--Patryk-->
