--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Wybierzesz najlepsze produkty</h1>
         <p>Nie ruszając się z domu. Nigdy nie było to takie proste!</p>
         <a href="#singup" style="text-decoration: none;">
-            <div id="subscribe">Subskrybuj</div>
+            <div id="subscribe">Dowiedz się więcej</div>
         </a>
         <!--Patryk-->
         </div>
