Polskie napisy, poprawione logo,

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <nav class="navigation-nav" id="navigation">
     <ul class="navigationul">
         <li class="navigation">
-            <a class="navigation" href="#intro">Intro</a> </li>
+            <a class="navigation" href="#intro">Start</a> </li>
         <li class="navigation">
-            <a class="navigation" href="#features">Features</a></li>
+            <a class="navigation" href="#features">Funkcje</a></li>
         <li class="navigation">
-            <a class="navigation" href="#singup" >Sign up!</a></li>
+            <a class="navigation" href="#singup">Dowiedz sie wiecej</a></li>
         <li class="navigation">
-            <a class="navigation" href="#team" >Team</a></li>
+            <a class="navigation" href="#team" >Zespol</a></li>
         <li class="floating-clear"></li>
 
 
@@ -83,8 +83,6 @@
 </div>
 
 </section>
-<div id="team">
-
 
 <section id="team">
     <header class="team-header">Zespół</header>
