struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2

--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 
 <div id="footer">
     <div id="be">
-        <h1>Follow us</h1>
+        <h1>Bądźmy blisko</h1>
     </div>
     <div id="contact">
-        <h1>Contact us</h1>
+        <h1>Kontakt</h1>
     </div>
     <div style="clear: both"></div>
     <div id="socials">
