--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     </div>
     <div class="features-float-clear"></div>
 </div>
-<section>
-<div class="signup" id="singup">
+<section id="singup">
+<div class="signup">
     <form action="http://tools.is-academy.pl/mailer.php" method="post">
-        <div class="signup">Obiecujemy skontaktować się z tobą tylko RAZ!:</div><br>
+        <p class="singup-title">Obiecujemy skontaktować się z tobą tylko RAZ!:</p><br>
         <input class="inputemail" type="email" placeholder="Your email...." name="email"  autofocus>
         <input type="hidden" name="receiver" value="wildmanblues@op.pl">
         <input class="myButton" type="submit">
