--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 <div class="signup">
     <form action="http://tools.is-academy.pl/mailer.php" method="post">
         <p class="singup-title">Obiecujemy skontaktować się z tobą tylko RAZ!:</p><br>
-        <input class="inputemail" type="email" placeholder="Your email...." name="email"  autofocus>
+        <input class="input-email" type="email" placeholder="Your email...." name="email"  autofocus>
         <input type="hidden" name="receiver" value="wildmanblues@op.pl">
-        <input class="myButton" type="submit">
+        <input class="my-button" type="submit">
     </form>
 
 </div>
