features - nowe pozycjonowanie

--- a/index.html
+++ b/index.html
@@ -43,33 +43,32 @@
 <div id="features">
 <!--Beata-->
 
-    <div id="features-suggestion" class="features-float-left features-feature">
+    <div id="features-suggestion" class="features-feature">
         <p class="features-title">Sugerowane produkty</p>
         <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
             nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
-            <!---->
         </p>
     </div>
-    <div id="features-compare" class="features-float-right features-feature">
+    <div id="features-compare" class="features-feature">
         <p class="features-title">Porównaj ceny</p>
         <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
             nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
     </div>
-    <div id="features-nav" class="features-float-left features-feature">
+    <div class="features-line-break"></div>
+    <div id="features-nav" class="features-feature">
         <p class="features-title">Lokalizacje sklepów z produktami</p>
         <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
             nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
     </div>
-    <div id="features-list" class="features-float-right features-feature">
+    <div id="features-list" class="features-feature">
         <p class="features-title">Lista zakupów</p>
         <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
             nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
     </div>
-    <div class="features-float-clear"></div>
 </div>
 <section>
 <div class="signup" id="singup">
@@ -86,7 +85,6 @@
 
 <section id="team">
     <header class="team-header">Zespół</header>
-    <!--klasa dla opisu-->
     <p class="team-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
         Inventore maxime corporis similique, tempore tenetur ipsum
         eligendi animi illo deleniti voluptatum.</p>
