features - nowe pozycjonowanie

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     </ul>
     </nav>
-
+<!--Piotr--
 <!-- Odsyłacze do poszczególnych ID-->
-
+<!--Patryk-->
 <div id="intro">
     <div class="logo">
         <p></p><img class="logo" src="images/background/logo31.png" alt="logo">
@@ -35,64 +35,48 @@
         <a href="#singup" style="text-decoration: none;">
             <div id="subscribe">Dowiedz się więcej</div>
         </a>
-
+        <!--Patryk-->
         </div>
 
-
+<!--Patryk-->
 </div>
 <div id="features">
+<!--Beata-->
 
-
-    <div id="features-suggestion" class="features-float-left features-feature">
-        <p class="features-title">
-            Sugerowane produkty
-        </p>
+    <div id="features-suggestion" class="features-feature">
+        <p class="features-title">Sugerowane produkty</p>
         <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
             nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
         </p>
     </div>
-    <div id="features-compare" class="features-float-right features-feature">
-        <p class="features-title">
-            Porównaj ceny
-        </p>
-        <p class="features-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    <div id="features-compare" class="features-feature">
+        <p class="features-title">Porównaj ceny</p>
+        <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
-            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
-        </p>
+            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
     </div>
-    <div id="features-nav" class="features-float-left features-feature">
-        <p class="features-title">
-            Lokalizacje sklepów z produktami
-        </p>
-        <p class="features-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    <div class="features-line-break"></div>
+    <div id="features-nav" class="features-feature">
+        <p class="features-title">Lokalizacje sklepów z produktami</p>
+        <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
-            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
-        </p>
+            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
     </div>
-    <div id="features-list" class="features-float-right features-feature">
-        <p class="features-title">
-            Lista zakupów
-        </p>
-        <p class="features-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    <div id="features-list" class="features-feature">
+        <p class="features-title">Lista zakupów</p>
+        <p class="features-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed maximus lorem ut massa pharetra ornare. Nullam in quam
-            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
-        </p>
+            nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
     </div>
-    <div class="features-float-clear"></div>
 </div>
-<section id="singup">
-<div class="signup">
+<section>
+<div class="signup" id="singup">
     <form action="http://tools.is-academy.pl/mailer.php" method="post">
-        <p class="singup-title">
-            Obiecujemy skontaktować się z tobą tylko RAZ!:
-        </p><br>
-        <input class="input-email" type="email" placeholder="Your email...." name="email"  autofocus>
+        <div class="signup">Obiecujemy skontaktować się z tobą tylko RAZ!:</div><br>
+        <input class="inputemail" type="email" placeholder="Your email...." name="email"  autofocus>
         <input type="hidden" name="receiver" value="wildmanblues@op.pl">
-        <input class="my-button" type="submit">
+        <input class="myButton" type="submit">
     </form>
 
 </div>
@@ -101,55 +85,44 @@
 
 <section id="team">
     <header class="team-header">Zespół</header>
-
-    <p class="team-title">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    <p class="team-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
         Inventore maxime corporis similique, tempore tenetur ipsum
-        eligendi animi illo deleniti voluptatum.
-    </p>
+        eligendi animi illo deleniti voluptatum.</p>
     <div id="team-section">
         <div class="team-members team-foto-Patryk">
             <img class="team-foto " src="images/face.jpeg" alt="zdjecie-piotr">
             <h2 class="team-name">Piotr</h2>
-            <p class="team-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
-                nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.
-            </p>
+                nec dui aliquet fringilla vulputate vel tellus. Cras eleifend nunc ac risus.</p>
         </div>
         <div class="team-members">
             <img class="team-foto" src="images/face.jpeg" alt="zdjecie-patryk">
             <h2 class="team-name">Patryk</h2>
-            <p class="team-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
-            </p>
         </div>
         <div class="team-members">
             <img class="team-foto" src="images/face.jpeg" alt="zdjecie-karol">
             <h2 class="team-name">Karol</h2>
-            <p class="team-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
-            </p>
         </div>
         <div class="team-members">
             <img class="team-foto" src="images/face.jpeg" alt="zdjecie-beata">
             <h2 class="team-name">Beata</h2>
-            <p class="team-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
-            </p>
         </div>
     </div></section>
-
+<!--Karol-->
 
 <div id="footer">
     <div id="be">
-        <h1>Bądźmy blisko</h1>
+        <h1>Follow us</h1>
     </div>
     <div id="contact">
-        <h1>Kontakt</h1>
+        <h1>Contact us</h1>
     </div>
     <div style="clear: both"></div>
     <div id="socials">
@@ -182,9 +155,7 @@
     </div>
     <div id="credits" style="clear: both">
         <p>© Copyright 2016</p>
-        <p>
-            Wszystkie prawa zastrzeżone. Wszystkie teksty, zdjęcia, grafika, ścieżki dźwiękowe, wideo i animacji danych jak również ich skład lub układ są chronione prawami autorskimi i innymi prawami ochronnymi. Ich zawartość nie mogą być kopiowane do celów komercyjnych lub innych, ani nie może on być wyświetlany, nawet w zmodyfikowanej wersji na innych stronach internetowych.
-        </p>
+        <p>Wszystkie prawa zastrzeżone. Wszystkie teksty, zdjęcia, grafika, ścieżki dźwiękowe, wideo i animacji danych jak również ich skład lub układ są chronione prawami autorskimi i innymi prawami ochronnymi. Ich zawartość nie mogą być kopiowane do celów komercyjnych lub innych, ani nie może on być wyświetlany, nawet w zmodyfikowanej wersji na innych stronach internetowych.</p>
     </div>
 </div>
 </body>
