poprawa pozycjonowania team

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </form>
 </div>
 </section>
-<div id="team">
+
 <section id="team">
     <header class="team-header">Zespół</header>
     <p class="team-title">
@@ -93,7 +93,7 @@
         eligendi animi illo deleniti voluptatum.
     </p>
     <div id="team-section">
-        <div class="team-members team-foto-Patryk">
+        <div class="team-members">
             <img class="team-foto " src="images/face.jpeg" alt="zdjecie-piotr">
             <h2 class="team-name">Piotr</h2>
             <p class="team-description">
@@ -126,7 +126,9 @@
                 Sed maximus lorem ut massa pharetra ornare. Nullam in quam
             </p>
         </div>
-    </section>
+        <div class="team-clear"></div>
+    </div>
+</section>
 
 <div id="footer">
     <div id="be">
