--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </p><br>
                 <input class="input-email" type="email" placeholder="Your email...." name="email">
                 <input type="hidden" name="receiver" value="wildmanblues@op.pl">
-                <input class="my-button" type="submit">
+                <input class="button-for-form-subskribe" type="submit">
             </form>
         </div>
     </section>
