struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS cc-names      Clean Code in footer

--- a/index.html
+++ b/index.html
@@ -146,45 +146,45 @@
         </div>
     </section>
 </main>
-<footer id="footer">
-    <div id="be">
+<footer>
+    <div id="footer-poznajmy-text">
         <h1>
-            Bądźmy blisko
+            Poznajmy się
         </h1>
     </div>
-    <div id="contact">
+    <div id="footer-kontakt-text">
         <h1>Kontakt</h1>
     </div>
     <div style="clear: both"></div>
-    <div id="socials">
-        <a href="https://facebook.com" class="linksocial" target="_blank">
-            <div id="fc">
+    <div id="footer-socials-text">
+        <a href="https://facebook.com" class="footer-social-icons" target="_blank">
+            <div id="footer-facebook-icon">
                 <i class="icon-facebook"></i>
             </div>
         </a>
-        <a href="htps://googleplus.com" class="linksocial" target="_blank">
-            <div id="gplus">
+        <a href="htps://googleplus.com" class="footer-social-icons" target="_blank">
+            <div id="footer-googleplus-icon">
                 <i class="icon-googleplus"></i>
             </div>
         </a>
-        <a href="https://www.instagram.com" class="linksocial" target="_blank">
-            <div id="ins">
+        <a href="https://www.instagram.com" class="footer-social-icons" target="_blank">
+            <div id="footer-instagram-icon">
                 <i class="icon-instagram"></i>
             </div>
         </a>
-        <a href="https://youtube.pl" class="linksocial" target="_blank">
-            <div id="yt">
+        <a href="https://youtube.pl" class="footer-social-icons" target="_blank">
+            <div id="footer-youtube-icon">
                 <i class="icon-youtube"></i>
             </div>
         </a>
-        <a href="mailto:frontreact@infoshareacadey.pl?Subject=Hello%20again" class="linksocial" target="_blank" style="float: right">
-            <div id="gmail">
+        <a href="mailto:frontreact@infoshareacadey.pl?Subject=Hello%20again" class="footer-social-icons" target="_blank" style="float: right">
+            <div id="footer-gmail-icon">
                 <i class="icon-gmail"></i>
             </div>
         </a>
         <div style="clear: both"></div>
     </div>
-    <div id="credits" style="clear: both">
+    <div id="footer-credits" style="clear: both">
         <p>
             © Copyright 2016
         </p>
