--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </p>
         <div id="team-section">
             <div class="team-members">
-                <img class="team-photo " src="images/team-member.jpeg" alt="zdjecie-piotr">
+                <img class="team-photo " src="images/team-photo-Piotr.jpg" alt="zdjecie-piotr">
                 <h2 class="team-name">Piotr</h2>
                 <p class="team-description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -127,7 +127,7 @@
                 </p>
             </div>
             <div class="team-members">
-                <img class="team-photo" src="images/team-member.jpeg" alt="zdjecie-karol">
+                <img class="team-photo" src="images/team-photo-Karol.jpg" alt="zdjecie-karol">
                 <h2 class="team-name">Karol</h2>
                 <p class="team-description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
