struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS dowiedz cc-names      Clean Code in footer cc-simple  Finish

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Nie ruszając się z domu. Nigdy nie było to takie proste!
             </p>
             <a href="#singup" style="text-decoration: none;">
-                <div id="subscribe">Dowiedź się więcej</div>
+                <div id="subscribe">Dowiedz się więcej</div>
             </a>
         </div>
     </div>
