struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS dowiedz cc-names      Clean Code in footer cc-simple ortografia  Finish

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </li>
             <li class="navigation">
                 <a class="navigation" href="#singup">
-                    Dowiedź się więcej
+                    Dowiedz się więcej
                 </a>
             </li>
             <li class="navigation">
@@ -42,7 +42,7 @@
         </div>
         <div class="slogan" style="">
             <h1>
-                Wybierzesz najlepsze produkty ekologiczne
+                Wybierzesz najlepsze, ekologiczne produkty.
             </h1>
             <p>
                 Nie ruszając się z domu. Nigdy nie było to takie proste!
@@ -60,7 +60,7 @@
                 Sugerowane produkty
             </p>
             <p class="features-description">
-                Wybierzemy najlepsze produkty oraz podpowiemy co moze ciebie zainteresować.
+                Wybierzemy najlepsze produkty oraz podpowiemy co może Ciebie zainteresować.
             </p>
         </div>
         <div id="features-compare" class="features-feature">
